--- a/hacky/Monances/pages/Dashboard/dashboard.html
+++ b/hacky/Monances/pages/Dashboard/dashboard.html
@@ -40,7 +40,7 @@
             <span class="material-icons">grid_view</span>
             <p>Dashboard</p>
           </a>
-          <a href="/landingpage.html#target-section">
+          <a href="https://haryiankkumra.github.io/Fintech/landingpage.html#target-section">
             <span class="material-icons">contact_page</span>
             <p>Contact</p>
           </a>
@@ -48,18 +48,18 @@
             <span class="material-icons">money</span>
             <p> Investment</p>
            
-              <a href="/hacky/Chatbot.html">
+              <a href="https://haryiankkumra.github.io/Fintech/hacky/Chatbot.html">
                 <span class="material-icons">chat</span>
                 <p>Chat Bot</p>
-                <a href="/cibil/cibil.html">
+                <a href="https://haryiankkumra.github.io/Fintech/cibil/cibil.html">
                   <span class="material-icons">score</span>
                   <p>CIBIL</p>
-                  <a href="/investment/Wealthfront/index.html">
+                  <a href="https://haryiankkumra.github.io/Fintech/investment/Wealthfront/index.html">
                     <span class="material-symbols-outlined">
                       account_balance_wallet
                       </span>
                     <p>Money Tracker</p>
-                    <a href="/Exclusive/exclusive member.html">
+                    <a href="https://haryiankkumra.github.io/Fintech/Exclusive/exclusive%20member.html">
                       <span class="material-symbols-outlined">star</span>
                       <p>Exclusive Member</p>
           <a href="../../index.html">
