--- a/hacky/Monances/index.html
+++ b/hacky/Monances/index.html
@@ -73,7 +73,11 @@
         <div class="header-content-left">
           <h1>Your best financial life starts here.</h1>
           <p>
-           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit hic vel vitae. Cumque laborum quidem iusto .</p>
+            - Increased financial literacy and planning
+            - Improved investment outcomes
+            - Reduced financial stress and anxiety
+            - Enhanced financial inclusion for gig workers and underserved communities
+            </p>
           <a href="http://127.0.0.1:8000/" class="button get-started"
             >Go to Dashboard</a
           >
