--- a/landingpage.html
+++ b/landingpage.html
@@ -154,7 +154,12 @@
                         <div class="row">
                             <div class="col col-md-8 col-md-offset-2 slide-caption">
                                 <h2>Leader to became rich</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, quod sint eaque aut eius, minus nulla numquam cupiditate corrupti eos obcaecati, dignissimos placeat atque magnam quos repellendus voluptates suscipit animi.</p>
+                                <p>- Track your spending, income, and expenses in one place
+                                    - Monitor your investments and receive personalized advice
+                                    - Set budgets and receive alerts to stay on track
+                                    - Access expert resources and financial education
+                                    - Enjoy a user-friendly, intuitive interface
+                                    </p>
                                 <div class="btns">
                                     <a href="./hacky/Monances/index.html" class="theme-btn">About Us</a>
                                 </div>
@@ -169,7 +174,12 @@
                         <div class="row">
                             <div class="col col-md-8 col-md-offset-2 slide-caption">
                                 <h2>Leader to became rich</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum voluptates, officia, dolores odio, hic dolore numquam debitis consectetur alias aliquid quia nisi? Optio laboriosam exercitationem libero cupiditate aspernatur provident delectus?</p>
+                                <p>- Track your spending, income, and expenses in one place
+                                    - Monitor your investments and receive personalized advice
+                                    - Set budgets and receive alerts to stay on track
+                                    - Access expert resources and financial education
+                                    - Enjoy a user-friendly, intuitive interface
+                                    </p>
                                 <div class="btns">
                                     <a href="./hacky/Monances/index.html" class="theme-btn">About Us</a>
                                 </div>
@@ -184,7 +194,12 @@
                         <div class="row">
                             <div class="col col-md-8 col-md-offset-2 slide-caption">
                                 <h2>Leader to became rich</h2>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi consequuntur enim facilis non blanditiis aliquid, illo ipsam, itaque perferendis dolorum libero, asperiores assumenda hic sequi. Laudantium nobis ad aliquam quasi.</p>
+                                <p>- Track your spending, income, and expenses in one place
+                                    - Monitor your investments and receive personalized advice
+                                    - Set budgets and receive alerts to stay on track
+                                    - Access expert resources and financial education
+                                    - Enjoy a user-friendly, intuitive interface
+                                    .</p>
                                 <div class="btns">
                                     <a href="./hacky/Monances/index.html" class="theme-btn">About Us</a>
                                 </div>
