--- a/landingpage.html
+++ b/landingpage.html
@@ -111,7 +111,7 @@
                                 <a href="./landingpage.html">Home</a>
                             </li>
                             <li><a href="./hacky/Monances/index.html">About</a></li>
-                            <li><a href="http://127.0.0.1:8000/">Dashboard</a></li>
+                            <li><a href="./hacky/Monances/pages/Dashboard/dashboard.html">Dashboard</a></li>
                             <!-- login page -->
                             <li>  <a href="#target-section" class="scroll-button">Contact</a></li>
                         </ul>
