--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://haryiankkumra.github.io/Fintech/landingpage.html">
+    <meta http-equiv="refresh" content="0; url=landingpage.html">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="https://haryiankkumra.github.io/Fintech/landingpage.html">link</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="landingpage.html">link</a>.</p>
 </body>
 </html>
