--- a/hacky/Monances/index.html
+++ b/hacky/Monances/index.html
@@ -120,7 +120,7 @@
             Investing.
           </p>
           <div class="get-started-line">
-            <a href="/hacky/Monances/pages/Dashboard/dashboard.html" class="get-started"
+            <a href="https://haryiankkumra.github.io/Fintech/hacky/Monances/pages/Dashboard/dashboard.html" class="get-started"
               >Get Started</a
             >
             <div class="green-line"></div>
