--- a/hacky/Monances/pages/Dashboard/dashboard.html
+++ b/hacky/Monances/pages/Dashboard/dashboard.html
@@ -40,7 +40,7 @@
             <span class="material-icons">grid_view</span>
             <p>Dashboard</p>
           </a>
-          <a href="/Fintech/landingpage.html#target-section">
+          <a href="https://haryiankkumra.github.io/Fintech/landingpage.html#target-section">
             <span class="material-icons">contact_page</span>
             <p>Contact</p>
           </a>
@@ -48,10 +48,10 @@
             <span class="material-icons">money</span>
             <p> Investment</p>
            
-              <a href="/Fintech/hacky/Chatbot.html">
+              <a href="https://haryiankkumra.github.io/Fintech/hacky/Chatbot.html">
                 <span class="material-icons">chat</span>
                 <p>Chat Bot</p>
-                <a href="/Fintech/cibil/cibil.html">
+                <a href="https://haryiankkumra.github.io/Fintech/cibil/cibil.html">
                   <span class="material-icons">score</span>
                   <p>CIBIL</p>
                   <a href="/Fintech/investment/Wealthfront/index.html">
