--- a/hacky/Monances/pages/Dashboard/dashboard.html
+++ b/hacky/Monances/pages/Dashboard/dashboard.html
@@ -54,12 +54,12 @@
                 <a href="https://haryiankkumra.github.io/Fintech/cibil/cibil.html">
                   <span class="material-icons">score</span>
                   <p>CIBIL</p>
-                  <a href="/Fintech/investment/Wealthfront/index.html">
+                  <a href="/investment/Wealthfront/index.html">
                     <span class="material-symbols-outlined">
                       account_balance_wallet
                       </span>
                     <p>Money Tracker</p>
-                    <a href="/Fintech/Exclusive/exclusive%20member.html">
+                    <a href="/Exclusive/exclusive member.html">
                       <span class="material-symbols-outlined">star</span>
                       <p>Exclusive Member</p>
           <a href="../../index.html">
