--- a/hacky/Monances/index.html
+++ b/hacky/Monances/index.html
@@ -78,7 +78,7 @@
             - Reduced financial stress and anxiety
             - Enhanced financial inclusion for gig workers and underserved communities
             </p>
-          <a href="/hacky/Monances/pages/Dashboard/dashboard.html" class="button get-started"
+          <a href="./pages/Dashboard/dashboard.html" class="button get-started"
             >Go to Dashboard</a
           >
         </div>
@@ -120,7 +120,7 @@
             Investing.
           </p>
           <div class="get-started-line">
-            <a href="https://haryiankkumra.github.io/Fintech/hacky/Monances/pages/Dashboard/dashboard.html" class="get-started"
+            <a href="../../../Fintech/hacky/Monances/pages/Dashboard/dashboard.html" class="get-started"
               >Get Started</a
             >
             <div class="green-line"></div>
