--- a/landingpage.html
+++ b/landingpage.html
@@ -111,8 +111,7 @@
                                 <a href="./landingpage.html">Home</a>
                             </li>
                             <li><a href="./hacky/Monances/index.html">About</a></li>
-                            <li><a href="{% url 'login' %}">Dashboard</a></li>
-                            <li><a href="../Fintech/login page django/registration/templates/login.html">Register</a></li>
+                            <li><a href="./hacky/Monances/pages/Dashboard/dashboard.html">Dashboard</a></li>
 
                             <!-- login page -->
                             <li>  <a href="#target-section" class="scroll-button">Contact</a></li>
