--- a/hacky/Monances/pages/Dashboard/dashboard.html
+++ b/hacky/Monances/pages/Dashboard/dashboard.html
@@ -40,7 +40,7 @@
             <span class="material-icons">grid_view</span>
             <p>Dashboard</p>
           </a>
-          <a href="../../../../../Fintech/landingpage.html#target-section">
+          <a href="../../../..//landingpage.html#target-section">
             <span class="material-icons">contact_page</span>
             <p>Contact</p>
           </a>
