--- a/hacky/Monances/index.html
+++ b/hacky/Monances/index.html
@@ -24,7 +24,7 @@
         <div class="buttons">
           <a href="/landingpage.html" class="button contact">Home</a>
           
-          <a href="/hacky/Monances/pages/Dashboard/dashboard.html" class="button get-started"
+          <a href="./pages/Dashboard/dashboard.html" class="button get-started"
             >Dashboard</a
           >
         </div>
@@ -140,7 +140,7 @@
           </div>
           <div class="get-in-touch-right">
             <a
-              href="/hacky/Monances/pages/Dashboard/dashboard.html"
+              href="./pages/Dashboard/dashboard.html"
               class="button get-started"
               >Dashboard</a
             >
